# ADR_parallel

./: CMakeLists.txt  pyproject.toml
include/sparkplus/: adr.hpp  constants.hpp  device_info.hpp  exceptions.hpp  input_feed.hpp  memory_manager.hpp  pipeline.hpp  session_manager.hpp  sparkplus.hpp  stream_manager.hpp  types.hpp
python/: bindings.cpp
python/sparkplus/: __init__.py
