[build-system]
requires = ["scikit-build-core>=0.9.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "sparkplus"
version = "0.1.0"
description = "Interface-first C++17 architecture for ADR ONNX orchestration"
requires-python = ">=3.9"

[tool.scikit-build]
wheel.packages = ["python/sparkplus"]
cmake.version = ">=3.20"

